Updating flaky test to more accurately represent now-lower queries issued by Apex Rollup

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -342,7 +342,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   }
 
   global virtual String runCalc() {
-    this.logger.log('no-op!', LoggingLevel.INFO);
+    this.logger.log('no-op!', this.getTypeName(), LoggingLevel.INFO);
     return 'no-op';
   }
 
