Changed the way cabooses store state for lookup/calc item fields

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -154,8 +154,6 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     this.calcItemReplacer = innerRollup.calcItemReplacer;
     this.lookupItems = innerRollup.lookupItems;
     this.previouslyResetParents.addAll(innerRollup.getPreviouslyResetParents());
-    this.calcObjectToUniqueFieldNames = innerRollup.calcObjectToUniqueFieldNames;
-    this.lookupObjectToUniqueFieldNames = innerRollup.lookupObjectToUniqueFieldNames;
   }
 
   // Inner rollup constructor - a rollup solely concerned with calculations
@@ -982,6 +980,8 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     this.rollups.addAll(this.deferredRollups);
     this.deferredRollups.clear();
     this.isTimingOut = false;
+    this.lookupObjectToUniqueFieldNames = null;
+    this.calcObjectToUniqueFieldNames = null;
 
     if (isDeferralAllowed) {
       this.logger.log('deferred rollups remaining:', this.rollups, LoggingLevel.INFO);
@@ -999,11 +999,10 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   }
 
   private void populateObjectFields(List<RollupAsyncProcessor> rollups) {
-    if (this.lookupObjectToUniqueFieldNames != null) {
-      return;
+    if (this.lookupObjectToUniqueFieldNames == null) {
+      this.lookupObjectToUniqueFieldNames = new Map<SObjectType, Set<String>>();
+      this.calcObjectToUniqueFieldNames = new Map<SObjectType, Set<String>>();
     }
-    this.lookupObjectToUniqueFieldNames = new Map<SObjectType, Set<String>>();
-    this.calcObjectToUniqueFieldNames = new Map<SObjectType, Set<String>>();
     List<Rollup__mdt> combinedMeta = new List<Rollup__mdt>();
     for (RollupAsyncProcessor roll : rollups) {
       if (roll.lookupObj == null) {
