--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -296,11 +296,8 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     } else if (syncRollups.isEmpty() == false) {
       this.logger.log('about to process sync rollups', System.LoggingLevel.INFO);
       this.process(syncRollups);
-      logMessage = 'finished running sync rollups';
-      if (this.rollups.isEmpty()) {
-        rollupProcessId = logMessage;
-      }
-    } else {
+      this.logger.log('finished sync rollups', System.LoggingLevel.INFO);
+    } else if (this.rollups.isEmpty() == false || this instanceof RollupFullRecalcProcessor) {
       Integer totalCountOfRecords = this.getLookupRecordsCount(this.rollups);
       shouldRunAsBatch =
         shouldRunAsBatch ||
@@ -369,11 +366,12 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
       } else {
         roll = this;
       }
-    } else if (canEnqueue && (System.isQueueable() == false || hasAlreadyAsyncEnqueued == false)) {
+    } else if (canEnqueue && (System.isQueueable() == false || hasAlreadyAsyncEnqueued == false) && (this instanceof QueueableProcessor) == false) {
       roll = new QueueableProcessor(this);
     } else if (canEnqueue) {
       roll = this.rollupControl.IsDevEdOrTrialOrg__c && this.stackDepth >= 4 ? new RollupAsyncProcessor(this) : this;
     }
+
     if (roll?.isNoOp != false && (roll instanceof RollupFullRecalcProcessor) == false) {
       roll = new NoOpProcessor(this.invokePoint);
     }
@@ -384,6 +382,10 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   public without sharing class NoOpProcessor extends RollupAsyncProcessor {
     public NoOpProcessor(InvocationPoint invokePoint) {
       super(invokePoint);
+    }
+
+    public override String runCalc() {
+      return this.beginAsyncRollup();
     }
 
     protected override String beginAsyncRollup() {
@@ -698,8 +700,8 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     if (this.isTimingOut) {
       this.getDML().forceSyncUpdate();
     }
-    this.getDML().updateRecords();
     this.cleanup();
+    this.getDML().updateRecords();
     this.populateOtherDeferredRollups();
     this.processDeferredRollups();
   }
@@ -1423,5 +1425,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     RollupEvaluator.clearConditionCache();
     CACHED_CALC_ITEM_LOOKUPS = null;
     this.uniqueParentFields.clear();
+    this.cleanupStaticVars();
+    this.getCachedApexOperations().clear();
   }
 }
