--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -53,7 +53,6 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
   // Lazy-load section. Lots of additional lines, but with the benefit that we keep the heap size down for instances of Rollup
   // that never reference these variables
-  @TestVisible
   private static final Map<SObjectType, Set<TriggerOperation>> CACHED_APEX_OPERATIONS {
     get {
       if (CACHED_APEX_OPERATIONS == null) {
@@ -464,6 +463,11 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     if (ref != null) {
       props.put(key, JSON.serializePretty(ref));
     }
+  }
+
+  protected void cleanupStaticVars() {
+    Rollup.records = null;
+    Rollup.oldRecordsMap = null;
   }
 
   /**
@@ -2710,6 +2714,18 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       Map<String, SObjectField> lookupItemFields = lookupDescribe.fields.getMap();
       SObjectField lookupFieldOnOpObject = init.getSObjectFieldByName(lookupItemFields, rollupMetadata.LookupFieldOnLookupObject__c);
       SObjectField rollupFieldOnOpObject = init.getSObjectFieldByName(lookupItemFields, rollupMetadata.RollupFieldOnLookupObject__c);
+
+      if (rollupFieldOnCalcItem == null || calcLookupField == null || lookupFieldOnOpObject == null || rollupFieldOnOpObject == null) {
+        Map<String, String> errorMap = new Map<String, String>{
+          'Child rollup field' => '' + rollupFieldOnCalcItem,
+          'Child lookup field' => '' + calcLookupField,
+          'Parent lookup field' => '' + lookupFieldOnOpObject,
+          'Parent rollup field' => '' + rollupFieldOnOpObject
+        };
+        throw new System.IllegalArgumentException(
+          'At least one of the following values is null when it should not be. Check your rollup configs for possible misspellings: ' + JSON.serialize(errorMap)
+        );
+      }
 
       if (isFullRecalcOp(getBaseOperationName(rollupMetadata.RollupOperation__c)) || rollupMetadata.GroupByFields__c != null) {
         rollupMetadata.IsFullRecordSet__c = true;
